# name: test_yahoo_finance_settings_defaults
  <class 'dict'> {
    'ISIN_SCRAPE_MAX_RESULTS': 25,
    'ISIN_SCRAPE_TIMEOUT': 5,
    'ISIN_SCRAPE_URL': AnyHttpUrl('https://markets.businessinsider.com/ajax/SearchController_Suggest', scheme='https', host='markets.businessinsider.com', host_type='domain', path='/ajax/SearchController_Suggest'),
    'YAHOO_FINANCE_BASE_URL': AnyHttpUrl('https://query2.finance.yahoo.com', scheme='https', host='query2.finance.yahoo.com', host_type='domain'),
    'YAHOO_FINANCE_SCRAPE_URL': AnyHttpUrl('https://finance.yahoo.com/quote', scheme='https', host='finance.yahoo.com/quote', host_type='domain'),
  }
---
# name: test_yahoo_finance_settings_env
  <class 'dict'> {
    'ISIN_SCRAPE_MAX_RESULTS': 25,
    'ISIN_SCRAPE_TIMEOUT': 5,
    'ISIN_SCRAPE_URL': AnyHttpUrl('https://markets.businessinsider.com/ajax/SearchController_Suggest', scheme='https', host='markets.businessinsider.com', host_type='domain', path='/ajax/SearchController_Suggest'),
    'YAHOO_FINANCE_BASE_URL': AnyHttpUrl('https://some-overriden-url', scheme='https', host='some-overriden-url', host_type='int_domain'),
    'YAHOO_FINANCE_SCRAPE_URL': AnyHttpUrl('https://some-other-overriden-url', scheme='https', host='some-other-overriden-url', host_type='int_domain'),
  }
---
